# livequiz-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LINKS.txt  Makefile  README.md  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  analytics.py  auth.py  matches.py  moderation.py  questions.py  quiz_sets.py  rooms.py  users.py
backend/app/cache/: idempotency.py  keys.py  leaderboard.py  rate_limit.py  redis.py
backend/app/core/: config.py  logging.py  metrics.py  middleware.py  security.py  telemetry.py
backend/app/core/ids/: README.md  __init__.py  snowflake.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/models/: __init__.py  answer_option.py  answer_submission.py  audit_log.py  enums.py  final_score.py  match.py  match_question.py  moderation_report.py  outbox_event.py  question.py  quiz_set.py  quiz_set_tag.py  quiz_tag.py  room.py  room_participant.py  user.py
backend/app/events/: envelope.py  topics.py  types.py
backend/app/middleware/: request_id.py
backend/app/repositories/: __init__.py  audit_repo.py  leaderboard_snapshot_repo.py  match_repo.py  moderation_repo.py  outbox_repo.py  quiz_repo.py  room_repo.py  user_repo.py
backend/app/schemas/: __init__.py  _email.py  admin.py  auth.py  common.py  match.py  moderation.py  quiz.py  room.py  user.py
backend/app/services/: analytics_service.py  auth_service.py  match_service.py  moderation_service.py  outbox_service.py  quiz_service.py  room_service.py  scoring_service.py
backend/app/ws/: connection_manager.py  messages.py  redis_pubsub.py  router.py
backend/tests/integration/: _helpers.py  conftest.py  test_answer_submission.py  test_auth_flow.py  test_error_codes.py  test_idempotency.py  test_migrations.py  test_moderation.py  test_outbox_publisher.py  test_pubsub_bridge.py  test_quiz_crud.py  test_quiz_search.py  test_rooms.py  test_stream_worker.py  test_websocket.py
backend/tests/unit/: test_scoring.py  test_security.py  test_snowflake.py
docs/: 00_START_HERE_FOR_AI.md  01_product_requirements.md  02_architecture.md  03_folder_structure.md  04_domain_model_dbml.md  05_database_schema_and_migrations.md  06_api_contracts.md  07_websocket_protocol.md  08_streaming_pipeline_and_bpmn.md  09_caching_indexing_optimization.md  10_from_scratch_component_snowflake.md  11_observability.md  12_docker_compose_nginx.md  13_frontend_ui_ux.md  14_testing_deployment.md  15_report_outline.md  16_ai_coding_prompts.md  16_team_task_split.md  17_team_task_split.md  deployment.md
docs/diagrams/: bpmn_event_pipeline.mmd  bpmn_match_flow.mmd  compose_dependency_graph.mmd  er_diagram.mmd  system_architecture.mmd
env/: .env.example
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/public/: robots.txt
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/components/: AppShell.tsx  AuthGuard.tsx  AuthHydrator.tsx  EmptyState.tsx  Logo.tsx  ReconnectOverlay.tsx  ThemeToggle.tsx
frontend/src/lib/: api-client.ts  auth.ts  clock.ts  env.ts  query-client.ts  session-cookie.ts  types.ts  utils.ts  ws-client.ts
frontend/src/styles/: globals.css
migrations/clickhouse/: 001_events.sql  002_analytics_views.sql
migrations/seeds/: seed_demo_room.py  seed_quizzes.py  seed_users.py
ops/moderation/: banned_words.json
ops/nginx/: nginx.conf  prod.conf  prod.tls.conf
ops/observability/: loki.yml  otel-collector.yaml  prometheus.yml  promtail.yml  tempo.yml
ops/scripts/: backup-postgres.sh  create-redpanda-topics.sh  wait-for-it.sh
scripts/: dev-reset.sh  export-report-screenshots.md  load-test-rooms.py  measure_analytics.py  measure_quiz_search.py
scripts/fixtures/: quiz_create.json
scripts/measurements/: A_leaderboard.json  A_leaderboard.md  B_quiz_search.md
workers/outbox_publisher/: pyproject.toml
workers/outbox_publisher/app/: main.py  topics.py
workers/scheduler/: pyproject.toml
workers/scheduler/app/: main.py
workers/stream_worker/: Dockerfile  pyproject.toml
workers/stream_worker/app/: clickhouse_client.py  dedupe.py  envelope.py  main.py
workers/stream_worker/app/handlers/: __init__.py  _common.py  answer.py  match.py  moderation.py  room.py
(+72 files in other folders)
