[project]
name = "livequiz-backend"
version = "0.1.0"
description = "LiveQuiz FastAPI backend"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "gunicorn>=23,<24",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.14,<1.15",
  "pydantic>=2.9,<2.10",
  "pydantic-settings>=2.6,<2.7",
  "email-validator>=2.2,<3",
  "redis[hiredis]>=5.2,<5.3",
  "aiokafka>=0.12,<0.13",
  "clickhouse-connect>=0.8,<0.9",
  "httpx>=0.27,<0.28",
  "passlib[argon2]>=1.7,<1.8",
  "argon2-cffi>=23,<24",
  "pyjwt>=2.9,<2.10",
  "structlog>=24,<25",
  "prometheus-fastapi-instrumentator>=7,<8",
  "opentelemetry-api>=1.28",
  "opentelemetry-sdk>=1.28",
  "opentelemetry-exporter-otlp>=1.28",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
  "opentelemetry-instrumentation-redis>=0.49b0",
  "opentelemetry-instrumentation-asyncpg>=0.49b0",
  "opentelemetry-instrumentation-aiokafka>=0.49b0",
  "prometheus-client>=0.21,<0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-randomly>=3.15",
  "pytest-cov>=5",
  "httpx-ws>=0.7",
  "testcontainers[postgres,redis,kafka,clickhouse]>=4.8",
  "ruff>=0.7,<0.8",
  "mypy>=1.13,<1.14",
  "types-passlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
