[project]
name = "livequiz-scheduler"
version = "0.1.0"
description = "Question deadline + room-state scheduler. Filled in P07."
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "redis[hiredis]>=5.2,<5.3",
  "structlog>=24,<25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
